Replace collect(colector.toList()) to map.toList() in QuotationService